fix/html-overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ a {
 body{
     font-size: 100%;
     list-style-type: none;
+    overflow-x: hidden;
 }
 
 /* Variaveis */
